<resources>
    <string name="app_name">2++</string>
    <string name="BestScore">Puntuación Máxima</string>
    <string name="country_prompt">Elige un Idioma</string>
    <string name="Play">Jugar</string>
    <string name="action_settings">Configuracion</string>
    <string name="configuracion">Configuracion</string>
    <string name="score">Puntos</string>
    <string name="sonido">SONIDO</string>
    <string name="volumen">Volumen   </string>
    <string name="lenguaje">LENGUAJE</string>
    <string name="Idioma">Idioma</string>
    <string name="atras">Regresar</string>
    <string name="creditos">Créditos</string>
    <string name="nivel">Nivel</string>
    <string name="facil">Fácil</string>
    <string name="medio">Medio</string>
    <string name="dificl">Difícil</string>
    <string-array name="country_arrays">
        <item>Elige un Idioma</item>
        <item>Español</item>
        <item>Frances</item>
        <item>Ingles</item>
    </string-array>
    <string name="title_activity_medio">Medio</string>
    <string name="title_activity_dificil">dificil</string>
    <string name="title_activity_final_score">Puntucacion Final</string>
    <string name="bloqueadoMedio">Bloqueado
                                Consigue 20 puntos en Facil</string>
    <string name="bloqueadoDificil">Bloqueado
                                Consigue 30 puntos en Medio</string>
</resources>
