<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:background="@drawable/fondo_level"
    >

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        android:id="@+id/buttonFacil"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/facil_imagen" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/facil"
        android:id="@+id/textViewfacil"
        android:layout_gravity="center_horizontal"
        android:textStyle="bold"
        android:textColor="#000"
        android:textSize="20dp"
        />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonMedio"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/medio_imagen" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/medio"
        android:id="@+id/textViewMedio"
        android:layout_gravity="center_horizontal"
        android:textStyle="bold"
        android:textColor="#000"
        android:textSize="20dp"
        />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonDificil"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/dificil_imagen"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/dificl"
        android:id="@+id/textViewDificil"
        android:layout_gravity="center_horizontal"
        android:textStyle="bold"
        android:textColor="#000"
        android:textSize="20dp"
        />

    <ImageButton
        android:id="@+id/buttonBack"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="40dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/back_button"
        />

</LinearLayout>