<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.luis.pruebaas1.Configuracion"
    android:background="@drawable/fondo_settings"
    >



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sonido"
        android:id="@+id/textSonido"
        android:textSize="25dp"
        android:textColor="@android:color/white"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/textVolumen"
        android:layout_alignStart="@+id/textVolumen" />
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@android:color/darker_gray"
        android:layout_below="@+id/textSonido"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/view1"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/volumen"
        android:id="@+id/textVolumen"
        android:textIsSelectable="false"
        android:textSize="20dp"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/view1"
        android:layout_alignLeft="@+id/textView1"
        android:layout_alignStart="@+id/textView1"
        android:textColor="@android:color/white"
        />

    <SeekBar

        android:id="@+id/seekBar1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="10"
        android:layout_below="@+id/textVolumen"
        android:layout_marginTop="44dp"
        android:layout_toEndOf="@+id/textVolumen"
        android:layout_toRightOf="@+id/textVolumen"
        />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/checkBox"
        android:checked="true"
        android:maxWidth="@dimen/abc_action_bar_stacked_max_height"
        android:layout_marginRight="40dp"
        android:layout_marginEnd="40dp"
        android:layout_alignTop="@+id/textVolumen"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        />
    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/seekBar1"
        android:layout_marginLeft="29dp"
        android:layout_marginTop="14dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lenguaje"
        android:id="@+id/textLenguaje"
        android:textSize="25dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/textVolumen"
        android:layout_alignStart="@+id/textVolumen"
        android:textColor="@android:color/white"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:id="@+id/view2"
        android:layout_below="@+id/textLenguaje"
        android:layout_centerHorizontal="true"
        />
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/Idioma"
        android:id="@+id/textIdioma"
        android:textSize="20dp"
        android:layout_below="@+id/view2"
        android:layout_toRightOf="@+id/textView1"
        android:layout_toEndOf="@+id/textView1"
        android:textColor="@android:color/white"
        android:layout_marginTop="42dp"
        />

    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/country_arrays"
        android:prompt="@string/country_prompt"
        android:textColor="@color/accent_material_dark"
        android:popupBackground="@color/abc_search_url_text_normal"
        android:layout_below="@+id/textIdioma"
        android:layout_marginTop="19dp"
        android:layout_alignLeft="@+id/textIdioma"
        android:layout_alignStart="@+id/textIdioma"

        />
    <ImageView
        android:layout_width="70dp"
        android:layout_height="60dp"
        android:id="@+id/imageView"
        android:src="@drawable/volume_icon"
        android:layout_alignTop="@+id/seekBar1"
        android:layout_alignLeft="@+id/textView1"
        android:layout_alignStart="@+id/textView1"
        android:layout_marginTop="-17dp"/>
    <!--Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/atras"
        android:id="@+id/buttonBack"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" /-->


</RelativeLayout>
